trying to fix overflow

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x: hidden;
+}
 .Navbar{
     display: flex;
     justify-content: space-between;
@@ -11,6 +14,7 @@
     margin: auto;
     padding: 4px 0;
     color: #ffff;
+    overflow-x: hidden;
 }
 
 .logo{
